--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   </head>
   <body>
     <h1>Hello, Vue :)</h1>
-
-    <div id="app">
-      <p>{{ title }} - {{ author }} - {{ age }}</p>
-    </div>
-
+    <div id="app">{{ title }} - {{ author }} - {{ age }}</div>
     <script src="app.js"></script>
   </body>
 </html>
