--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <h1>Hello, Vue :)</h1>
-    <div id="app">{{ title }} - {{ author }} - {{ age }}</div>
+    <div id="app">
+      <p>{{ title }} - {{ author }} - {{ age }}</p>
+
+      <button v-on:click="age++">Increase age</button>
+      <button v-on:click="age--">Decrease age</button>
+      <div @click="changeTitle('Diary of a Wimpy Kid')">Change book title</div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
