--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   <body>
     <h1>Hello, Vue :)</h1>
     <div id="app">
-      <p>{{ title }} - {{ author }} - {{ age }}</p>
+      <div v-if="showBooks">
+        <p>{{ title }} - {{ author }} - {{ age }}</p>
+      </div>
 
-      <button v-on:click="age++">Increase age</button>
-      <button v-on:click="age--">Decrease age</button>
-      <div @click="changeTitle('Diary of a Wimpy Kid')">Change book title</div>
+      <button @click="toogleShowBooks">
+        <span v-if="showBooks">Hide Books</span>
+        <span v-else>Show Books</span>
+      </button>
+
+      <div v-show="showBooks">currently showing books</div>
     </div>
     <script src="app.js"></script>
   </body>
