--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
     <h1>Hello, Vue :)</h1>
     <div id="app">
       <div v-if="showBooks">
-        <p>{{ title }} - {{ author }} - {{ age }}</p>
+        <ul>
+          <li v-for="book in books">
+            <h3>{{ book.title }}</h3>
+            <p>{{ book.author }}</p>
+          </li>
+        </ul>
       </div>
       <button @click="toogleShowBooks">
         <span v-if="showBooks">Hide Books</span>
         <span v-else>Show Books</span>
       </button>
-
-      <br />
-      <!-- mouse events -->
-      <div class="box" @mouseover="handleEvent($event, 5)">mouseover (enter)</div>
-      <div class="box" @mouseleave="handleEvent">mouseleave (exit)</div>
-      <div class="box" @dblclick="handleEvent">double click</div>
-      <div class="box" @mousemove="handleMousemove">position - {{ x }} {{ y }}</div>
     </div>
 
     <script src="app.js"></script>
