--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
       <!-- <a :href="url">best website ever</a> -->
       <div v-if="showBooks">
         <ul>
-          <li v-for="book in books" :class="{ fav: book.isFav }">
+          <li
+            v-for="book in books"
+            :class="{ fav: book.isFav }"
+            @click="toogleFav(book)"
+          >
+            <span v-if="showBooks">Hide Books</span>
+            <span v-else>Show Books</span>
             <img :src="book.img" :alt="book.title" />
             <h3>{{ book.title }}</h3>
             <p>{{ book.author }}</p>
