--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div v-if="showBooks">
         <ul>
           <li
-            v-for="book in books"
+            v-for="book in filteredBooks"
             :class="{ fav: book.isFav }"
             @click="toogleFav(book)"
           >
